--- a/bicosthe-front/package.json
+++ b/bicosthe-front/package.json
@@ -8,8 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1"
-   
   },
   "scripts": {
     "start": "react-scripts start",
